# SN1

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  build_upload_docker.sh  docker-compose.yml  gen.py  pyproject.toml  test.py
.github/workflows/: main.yml
agents/: agent_450.py
sn1/: __init__.py  boot.py  docker.py  server.py
sn1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
